# protofmt

./: CHANGELOG.md  LICENSE  README.md  cabal.project.freeze  example.proto  protofmt.cabal
.github/workflows/: build-check.yml
app/: Main.hs
src/: Ast.hs  Formatting.hs  Parsing.hs  ProtoFmt.hs
test/integration/: Spec.hs  expected.proto  input.proto
test/unit/: FormattingSpec.hs  ParsingSpec.hs  Spec.hs
