cabal-version:      3.6
name:               protofmt
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Formatter for protocol buffer files

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports:        https://github.com/pabloariasal/protofmt
license:            BSD-2-Clause
license-file:       LICENSE
author:             Pablo Arias

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: pabloariasal@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        ProtoFmt
        Parsing
        Ast
        Formatting

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        DuplicateRecordFields
        OverloadedStrings
        DisambiguateRecordFields
        LambdaCase
        RecordWildCards
    build-depends:
        base ^>=4.14.3.0,
        megaparsec,
        text,
        mtl,
        prettyprinter,
        sort
    hs-source-dirs:   src
    default-language: Haskell2010

executable protofmt
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        protofmt

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite unit
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:
        test/unit
    other-modules:
        ParsingSpec
        FormattingSpec
    main-is:
        Spec.hs
    default-extensions:
        OverloadedStrings
    build-depends:
        base ^>=4.14.3.0,
        protofmt,
        hspec,
        text

test-suite integration
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:
        test/integration
    main-is:
        Spec.hs
    build-depends:
        base ^>=4.14.3.0,
        protofmt,
        hspec,
        text
